# OWNAS

./: .gitignore  Cargo.toml  README.md
config/: dev.json
docs/: specification.md
src/: lib.rs  main.rs
src/cli/: client.rs  commands.rs  handlers.rs  mod.rs
src/commands/: files.rs  mod.rs  run.rs
src/config/: loader.rs  mod.rs  types.rs
src/controllers/: file_controller.rs  mod.rs  run_controller.rs
src/core/: control.rs  errors.rs  mod.rs  responses.rs  state.rs
src/logging/: init.rs
src/routes/: control.rs  mod.rs
src/server/: builder.rs  file_manager.rs  handler.rs  ipc_handler.rs  ipc_listener.rs  mod.rs  tcp_handler.rs  tcp_listener.rs  tcp_setup.rs
